@@ -1,5 +1,5 @@
 class TroskoDurations {
-  static const animation = Duration(milliseconds: 125);
-  static const switchAnimation = Duration(milliseconds: 250);
+  static const animation = Duration(milliseconds: 100);
+  static const switchAnimation = Duration(milliseconds: 200);
   static const backspaceHold = Duration(milliseconds: 500);
 }
