@@ -4,7 +4,6 @@ import 'package:flutter/material.dart';
 import 'package:get_it/get_it.dart';
 import 'package:uuid/uuid.dart';
 
-import '../../constants/durations.dart';
 import '../../models/category/category.dart';
 import '../../models/transaction/transaction.dart';
 import '../../services/firebase_service.dart';
@@ -50,15 +49,14 @@ class TransactionController
   /// VARIABLES
   ///
 
-  late final categoriesScrollController = ScrollController();
-  final categoryKeys = <String, GlobalKey>{};
-
   late final nameTextEditingController = TextEditingController(
     text: passedTransaction?.name,
   );
   late final noteTextEditingController = TextEditingController(
     text: passedTransaction?.note,
   );
+
+  final categoryKeys = <String, GlobalKey>{};
 
   ///
   /// INIT
@@ -101,7 +99,6 @@ class TransactionController
     if (value.category != null) {
       WidgetsBinding.instance.addPostFrameCallback((_) {
         final key = categoryKeys[value.category?.id];
-
         final ctx = key?.currentContext;
 
         if (ctx != null) {
